# platform.core.telephony.libtcore

./: 0001-Generate-Licence-file.patch  0002-Prevent-Dead-default-in-switch.patch  CMakeLists.txt  libtcore.manifest  tcore.pc.in
debian/: changelog  control  libtcore-dev.install.in  libtcore.install.in  rules
include/: at.h  co_call.h  co_context.h  co_custom.h  co_gps.h  co_modem.h  co_network.h  co_phonebook.h  co_ps.h  co_sap.h  co_sat.h  co_sim.h  co_sms.h  co_ss.h  communicator.h  core_object.h  hal.h  log.h  manager.h  mux.h  plugin.h  queue.h  server.h  storage.h  tcore.h  udev.h  user_request.h  util.h
include/common/: tel_call.h  tel_gps.h  tel_if.h  tel_return.h  tel_sap.h  tel_sms.h  tel_ss.h
include/internal/: tcore_types.h
include/type/: call.h  command.h  common.h  gps.h  modem.h  network.h  notification.h  phonebook.h  ps.h  request.h  response.h  sap.h  sat.h  sat_internal.h  sim.h  sms.h  sound.h  ss.h
packaging/: 0001-hal-Add-set_sound_path-function.patch  0002-hal-Add-new-entry-points-and-method-declarations.patch  0003-hal-Add-new-method-definitions.patch  0004-mux-Declare-new-public-API-for-HAL-plugin-manipulati.patch  0005-mux-Remove-plateform-dependencies-from-core-multiple.patch  0006-notification-Add-new-notifcation-type.patch  0007-at-Add-Connect-to-success-responses.patch  0008-hal-Add-new-setup_pdp-entry-point-declaration-and-DA.patch  0009-hal-Add-tcore_hal_setup_pdp-definition-and-mana-DATA.patch  0010-mux-Initialize-setup_pdp-entry-point.patch  libtcore.spec
src/: at.c  co_call.c  co_context.c  co_gps.c  co_modem.c  co_network.c  co_phonebook.c  co_ps.c  co_sap.c  co_sat.c  co_sim.c  co_sms.c  co_ss.c  communicator.c  core_object.c  hal.c  manager.c  mux.c  plugin.c  queue.c  server.c  storage.c  udev.c  user_request.c  util.c
src/core_object/: co_call.c  co_context.c  co_custom.c  co_gps.c  co_network.c  co_phonebook.c  co_ps.c  co_sap.c  co_sat.c  co_sim.c
tel-headers/: CMakeLists.txt  tel-headers.pc.in
tel-headers/include/: tel_modem.h  tel_network.h  tel_phonebook.h  tel_sat.h  tel_sim.h
tel-headers/introspection/: gen.sh  sat.xml
unit-test/: CMakeLists.txt  log.c  test-at.c  test-co.c  test-dcs.c  test-hal.c  test-network.c  test-queue.c  test-util.c
